openshift201/templates/loki_template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${LOKI_SERVICE_NAME}
      chart: loki-0.8.4
      heritage: Tiller
      release: pwei1018-loki
    name: pwei1018-loki
  spec:
    ports:
    - name: http-metrics
      port: 3100
      protocol: TCP
      targetPort: http-metrics
    selector:
      app: ${LOKI_SERVICE_NAME}
      release: pwei1018-loki
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    generation: 1
    labels:
      app: ${LOKI_SERVICE_NAME}
      chart: loki-0.8.4
      heritage: Tiller
      release: pwei1018-loki
    name: pwei1018-loki
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: ${LOKI_SERVICE_NAME}
        release: pwei1018-loki
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: ${LOKI_SERVICE_NAME}
          name: ${LOKI_SERVICE_NAME}
          release: pwei1018-loki
      spec:
        affinity: {}
        containers:
        - args:
          - -config.file=/etc/loki/loki.yaml
          env:
          - name: JAEGER_AGENT_HOST
          image: grafana/loki:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: http-metrics
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: ${LOKI_SERVICE_NAME}
          ports:
          - containerPort: 3100
            name: http-metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: http-metrics
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            readOnlyRootFilesystem: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/loki
            name: config
          - mountPath: /data
            name: storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: default
        serviceAccountName: default
        terminationGracePeriodSeconds: 30
        volumes:
        - name: config
          secret:
            defaultMode: 420
            secretName: pwei1018-loki
        - emptyDir: {}
          name: storage
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2019-05-27T19:14:19Z
      lastUpdateTime: 2019-05-27T19:14:19Z
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: 2019-05-27T19:12:59Z
      lastUpdateTime: 2019-05-27T19:14:19Z
      message: ReplicaSet "pwei1018-loki-b5c5bbc68" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${LOKI_SERVICE_NAME}
    name: ${LOKI_SERVICE_NAME}
  spec:
    host: loki-s4g19x-pwei1018-openshift201-may2019-dev.pathfinder.gov.bc.ca
    port:
      targetPort: http-metrics
    to:
      kind: Service
      name: pwei1018-loki
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2019-05-27T19:17:45Z
        status: "True"
        type: Admitted
      host: loki-s4g19x-pwei1018-openshift201-may2019-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
kind: List
